--- a/action.yml
+++ b/action.yml
@@ -20,15 +20,18 @@ runs:
 
     - name: Install dependencies
       run: npm ci
+      shell: bash
 
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+      shell: bash
 
     - name: Run Playwright tests
       run: npx playwright test
       env:
         FUSIONAUTH_ADMIN_URL: ${{ inputs.FUSIONAUTH_ADMIN_URL }}
         QUICKSTART_URL: ${{ inputs.QUICKSTART_URL }}
+      shell: bash
 
     - name: Upload Playwright results
       uses: actions/upload-artifact@v4
