--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v4
+      with:
+        repository: 'sonderformat-llc/c111-run-quickstart-e2e-test'
+        path: 'faQuickstartE2ETest'
 
     - uses: actions/setup-node@v4
       with:
@@ -21,10 +24,12 @@ runs:
     - name: Install dependencies
       run: npm ci
       shell: bash
+      working-directory: faQuickstartE2ETest
 
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
       shell: bash
+      working-directory: faQuickstartE2ETest
 
     - name: Run Playwright tests
       run: npx playwright test
@@ -32,11 +37,12 @@ runs:
         FUSIONAUTH_ADMIN_URL: ${{ inputs.FUSIONAUTH_ADMIN_URL }}
         QUICKSTART_URL: ${{ inputs.QUICKSTART_URL }}
       shell: bash
+      working-directory: faQuickstartE2ETest
 
     - name: Upload Playwright results
       uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: ./playwright-report/
+        path: ./faQuickstartE2ETest/playwright-report/
         retention-days: 30
