--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ runs:
       with:
         repository: 'sonderformat-llc/c111-run-quickstart-e2e-test'
         path: 'faQuickstartE2ETest'
-        ref: 'v0.1.1'
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - uses: actions/setup-node@v4
       with:
