refactor(github-action): add token input

--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
     description: 'The URL of the Quickstart application.'
     required: false
     default: 'http://localhost:3000'
+  GH_SECRET:  # id of input
+    description: 'The secret to access the Github API.'
+    required: true
 runs:
   using: "composite"
   steps:
@@ -16,7 +19,7 @@ runs:
       with:
         repository: 'sonderformat-llc/c111-run-quickstart-e2e-test'
         path: 'faQuickstartE2ETest'
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ inputs.GH_SECRET }}${{ secrets.GITHUB_TOKEN }}
 
     - uses: actions/setup-node@v4
       with:
