--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,6 @@ runs:
       uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report
+        name: playwright-report-${{github.run_number}}
         path: ./faQuickstartE2ETest/playwright-report/
         retention-days: 30
