--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,6 @@ runs:
       uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report-${{github.run_number}}
+        name: playwright-report-${{github.run_number}}-${{github.job}}
         path: ./faQuickstartE2ETest/playwright-report/
         retention-days: 30
