--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,8 +16,9 @@ concurrency:
   group: release
 
 jobs:
+  # This job creates the necessary labels for the release-please PRs
   label-check:
-    name: Create Prerelease Pull Request
+    name: Create release-please PR labels
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
