fix(release): simplify manifest sync

--- a/.github/release-config.json
+++ b/.github/release-config.json
@@ -3,6 +3,13 @@
   "include-component-in-tag": false,
   "packages": {
     ".": {
+      "extra-files": [
+        {
+          "type": "json",
+          "path": ".github/prerelease-manifest.json",
+          "jsonpath": "$[\".\"]"
+        }
+      ]
     }
   }
 }
