--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,9 +2,9 @@ name: Release
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
 
+# The different jobs of this workflow need the following permissions
 permissions:
     contents: write
     pull-requests: write
@@ -16,26 +16,8 @@ concurrency:
   group: release
 
 jobs:
-  # This job creates the necessary labels for the release-please PRs
-  label-check:
-    name: Create release-please PR labels
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Add labels to the repository if not present
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh label create "autorelease: pending" -c FBCA04 -d "release-please PR tagging - Pending release" || true
-          gh label create "autorelease: tagged" -c D4C5F9 -d "release-please PR tagging - Ready for release" || true
-          gh label create "autorelease: snapshot" -c D4C5F9 -d "release-please PR tagging - Ready for release" || true
-          gh label create "autorelease: published" -c 0E8A16 -d "release-please PR tagging - Released" || true
-
   prerelease-prep:
     name: Create Prerelease Pull Request
-    needs: label-check
     runs-on: ubuntu-latest
     outputs:
       releases_created: ${{ steps.release.outputs.releases_created }}
@@ -54,9 +36,9 @@ jobs:
     if: ${{ needs.prerelease-prep.outputs.releases_created == 'false' }}
     needs: prerelease-prep
     steps:
-      - name: End To End Test
+      - name: Release Build Push Deploy
         run: |
-          echo "Running end to end tests for prerelease!"
+          echo "Prerelease Tests"
 
   prerelease:
     name: Create Prerelease and Release Pull Request
@@ -84,30 +66,11 @@ jobs:
         run: |
           echo "Running release step!"
 
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Sync prerelease manifest
-        env:
-          MANIFEST_PATH: .github/prerelease-manifest.json
-          RELEASE_TAG: ${{ needs.prerelease-prep.outputs.tag_name }}
-        run: |
-          jq --arg tag "${RELEASE_TAG//v/}" '.["."] = $tag' $MANIFEST_PATH > temp.json \
-            && mv temp.json $MANIFEST_PATH
-
-      - name: Commit change
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add . $MANIFEST_PATH
-          git commit -m "chore: sync release manifests"
-          git push
-
   post-release:
-    name: Run Release Build Push Deploy
+    name: Post Release Steps
     runs-on: ubuntu-latest
     needs: release
     steps:
       - name: Post Release Step
         run: |
-          echo "Running post release step!"
+          echo "Running post-release steps!"
