ci(release): pin action versions

--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,8 @@ runs:
         exit 1
       shell: bash
 
-    - uses: actions/setup-node@v4
+    - name: Setup Node
+      uses: actions/setup-node@v4.3.0
       with:
         node-version: lts/*
 
@@ -89,7 +90,7 @@ runs:
       working-directory: ${{ github.action_path }}
 
     - name: Upload Playwright results
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v4.6.1
       if: ${{ !cancelled() }}
       with:
         name: ${{ inputs.ARTIFACT_PREFIX }}-report-${{github.run_number}}-${{github.run_attempt}}
